/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id 'application'
}

repositories {
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.apache.commons:commons-csv:1.10.0'
    implementation 'com.google.guava:guava:32.1.2-jre'

    implementation files("lib/antlr-3.4.jar")
    implementation files("lib/de.ovgu.featureide.lib.fm.attributes-v3.9.2.jar")
    implementation files("lib/de.ovgu.featureide.lib.fm-v3.9.2.jar")
    implementation files("lib/org.sat4j.core.jar")
    implementation files("lib/uvl-parser.jar")
}

group = 'org.collection.fm'
version = '1.0-SNAPSHOT'
description = 'batchanalysis'
java.sourceCompatibility = JavaVersion.VERSION_17

application {
    mainClass = 'org.collection.fm.FeatureStepAnalysis'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.collection.fm.FeatureStepAnalysis'
    }
}